V5.5: Final Deck alignment fix and SVG cache-busting v3

--- a/pisti/style.css
+++ b/pisti/style.css
@@ -27,7 +27,7 @@ body {
 #table {
     width: 95vmin;
     height: 95vmin;
-    background-image: url('masa_texture_100cm_real_scale.svg?v=2');
+    background-image: url('masa_texture_100cm_real_scale.svg?v=3');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     position: relative;
@@ -115,12 +115,16 @@ body {
 #round-1-box {
     left: 94%;
     top: 66%;
+    width: 4%;
+    height: 6%;
     transform: translate(-50%, -50%) rotate(-90deg);
 }
 
 #total-1-box {
     left: 94%;
     top: 34%;
+    width: 4%;
+    height: 6%;
     transform: translate(-50%, -50%) rotate(-90deg);
 }
 
@@ -258,13 +262,13 @@ body {
     z-index: 1000;
 }
 
-/* Deck Visual (DESTE area - Center by SVG text: x=761, y=937) */
+/* Deck Visual (DESTE area - Center by SVG dotted box: x=840, y=850) */
 #deck-visual {
     position: absolute;
-    left: 76%;
-    top: 93.7%;
-    width: 16.5%;
-    height: 9.5%;
+    left: 84%;
+    top: 85%;
+    width: 17%;
+    height: 10%;
     transform: translate(-50%, -50%);
     background: url('card_back.png') center/cover;
     background-size: 100% 100%;
